# LULC_Practice

./: .gitignore  pyproject.toml
notebooks/: deeplearning_LULC_CNN_1.ipynb
src/data_preparation/: data_preparation.py
