[tool.poetry]
name = "lulc-practice"
version = "0.1.0"
description = "practice for LULC machine learning classification in Python"
authors = ["SimSanghera <simon.sanghera@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
scipy = "^1.13.1"
seaborn = "^0.13.2"
plotly = "^5.22.0"
statsmodels = "^0.14.2"
pyhere = "^1.0.0"
ipywidgets = "^8.1.3"
jupyterlab = "^4.2.2"
notebook = "^7.2.1"
qtconsole = "^5.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
flake8 = "^7.0.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
